--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -2,8 +2,26 @@
 <html>
 <body>
 
-<h2>Heading 2</h1>
-<p>Hello World!</p>
+<div sectionMain> 
+    <img src="ucsdlogo.png" alt="UCSD logo">
+    <a href = "#section1">Section 1</a>
+    <a href = "#section2">Section 2</a>
+
+
+</div>
+
+<div id = "section1"> 
+    <h2>Section 1</h2>
+    <img src="ucsd-athletics-logo.svg" alt="triton logo">
+    <p>This is the triton Logo. I am a triton, proud to be a trion ROAR! </p>
+</div>
+
+<div id = "section2"> 
+    <h2>Section 2</h2>
+    <img src="logos-college-logos-07-23.svg" alt="colleges logo">
+</div>
+
+
 
 </body>
 </html>
