--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -13,7 +13,7 @@
             margin: 0;
         }
 
-        .bg-image {
+        .bg-image, .bg-form {
             background-image: url('background1.png');
             background-size: cover;
             display: inline-block; 
@@ -29,6 +29,11 @@
         .bg-color, .bg-image {
             font-size: 28px;
         }
+
+        .bg-form {
+            font-size: 20px;
+        }
+
 
         ul {
             list-style-type: none;
@@ -91,25 +96,25 @@
             overflow-y: scroll; 
         }
 
-        /* media queries*/
         @media (max-width: 800px) {
             ul {
-                display: none; 
+                display: none;
+            }
 
             img#logo {
-                max-width: 75%; 
+                max-width: 75%;
             }
 
             .bg-color, .bg-image {
-                font-size: 24px; 
+                font-size: 24px;
             }
 
             p {
-                font-size: 20px; 
+                font-size: 20px;
             }
 
             .grid-container {
-                grid-template-columns: repeat(2, 1fr); 
+                grid-template-columns: repeat(2, 1fr);
             }
         }
     </style>
@@ -153,6 +158,17 @@
             </div>
         </div>
     </div>
+
+    <div id="section4" class="bg-form">
+        <h2>Section 4 - Subscribe to our newsletters!</h2>
+        <form action="https://www.w3schools.com/action_page.php">
+            <label for="email" style="display: inline-block; width: 100px;">Enter email:</label>
+            <input type="email" id="email" name="email" required>
+            <input type="submit" value="Submit">
+            <br><br>
+        </form>
+    </div>    
 </div>
+
 </body>
-</html> 
+</html>
